--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -528,7 +528,7 @@
 
 - name: Typhoon
   brand: KMX
-  img: http://www.utahtrikes.com/uploads/utupgradesproducts/11617629/iconpic/TYPHOON-Icon1.jpg
+  img: http://kmxus.com/uploads/tu_productdetails/43/pic/Back.jpg
   msrp: $1199
   url: http://www.kmxus.com/typhoon.html
   rental_rate_week: $125
@@ -549,7 +549,7 @@
 
 - name: Cobra
   brand: KMX
-  img: http://www.utahtrikes.com/uploads/utupgradesproducts/11617627/iconpic/cobraicon1.jpg
+  img: http://kmxus.com/uploads/tu_productdetails/33/pic/CobraSide.jpg
   msrp: $1599
   url: http://www.kmxus.com/cobra.html
   rental_rate_week: $150
