--- a/_data/trikes.yml
+++ b/_data/trikes.yml
@@ -215,7 +215,7 @@
 
 - name: "700"
   brand: Catrike
-  img: https://www.hostelshoppe.com/images/products/lb_13cat_700.jpg
+  img: http://www.flyingfurniture.com.au/sites/default/files/imagecache/product_full/catrike%20700%202.jpg
   msrp: $2950
   url: "http://www.catrike.com/#!700/c1dnt"
   rental_rate_week: $250
